<resources>
    <string name="app_name">Language Translator</string>
    <string name="translated_text_hint">Translated text</string>
    <string name="downloaded_models_label">Downloaded models: %1$s</string>
    <string name="translate_progress">Translating…</string>
    <string name="delete_model">Delete Model</string>
    <string name="download_model">Download Model</string>
    <string name="unknown_error">Unknown error occurred.</string>
    <string name="source_text">Source text</string>
    <string name="image_content">Image</string>
    <string name="copy">Copy</string>
</resources>
