<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Spinner
            android:id="@+id/sourceLangSelector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textAlignment="center"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSwitchLang"
            style="@style/IconOnlyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text=""
            android:layout_gravity="center"
            app:icon="@drawable/ic_compare_arrows_black_24dp"
            app:layout_constraintEnd_toStartOf="@+id/targetLangSelector"
            app:layout_constraintStart_toEndOf="@+id/sourceLangSelector"
            app:layout_constraintTop_toTopOf="@id/sourceLangSelector" />

        <Spinner
            android:id="@+id/targetLangSelector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="end"
            app:layout_constraintBottom_toBottomOf="@id/sourceLangSelector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/buttonSwitchLang"
            app:layout_constraintTop_toTopOf="@id/sourceLangSelector" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:inputType="textMultiLine"
            app:endIconMode="clear_text"
            app:endIconTint="@color/secondary_text"
            app:layout_constraintBottom_toTopOf="@+id/sourceLangSelector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sourceText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:hint="@string/source_text" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/translatedTextHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView1"
        app:layout_constraintVertical_bias="0.13">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_content"
                android:src="@drawable/ic_copy"
                android:layout_gravity="end"
                />

            <TextView
                android:id="@+id/translatedText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/translated_text_hint"
                android:textColorHint="@color/secondary_text"
                android:textSize="18sp"
                android:textColor="@color/icons"
                tools:text="@string/translated_text_hint"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp" />



        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/downloadedModels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/downloaded_models_label"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/translatedTextHolder"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ToggleButton
        android:id="@+id/buttonSyncTarget"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textOff="@string/download_model"
        android:textOn="@string/delete_model"
        android:textSize="12sp"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintTop_toBottomOf="@id/downloadedModels"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ToggleButton
        android:id="@+id/buttonSyncSource"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:textOff="@string/download_model"
        android:textOn="@string/delete_model"
        android:textSize="12sp"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintTop_toBottomOf="@id/downloadedModels"
        app:layout_constraintStart_toEndOf="@id/buttonSyncTarget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>